zmeneny typ vozna v gui select1

--- a/src/gui/App.form
+++ b/src/gui/App.form
@@ -940,7 +940,7 @@
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabel22">
                   <Properties>
-                    <Property name="text" type="java.lang.String" value="Vozen"/>
+                    <Property name="text" type="java.lang.String" value="Typ vozna"/>
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabel23">
